更新读书笔记

--- a/UNIX:Linux 环境高级C语言系统开发/48_网络编程专题.md
+++ b/UNIX:Linux 环境高级C语言系统开发/48_网络编程专题.md
@@ -8,6 +8,8 @@
 
 [套接字-报式套接字实例](http://www.wyzc.com/play/8704/2403/#9114 "套接字-报式套接字实例")
 
+[套接字-动态报式套接字实例](http://www.wyzc.com/play/8704/2403/#9115 "套接字-动态报式套接字实例")
+
 ###笔记
 
 ---
@@ -108,7 +110,7 @@
 		
 		struct msg_st{
 		 
-			uint8_t char name[NAMESIZE];
+			uint8_t name[NAMESIZE];
 			uint32_t math;
 			uint32_t chinese;
 		
@@ -120,15 +122,26 @@
 
 		#include <stdio.h>
 		#include <stdlib.h>
+		#include <sys/types.h>
+		#include <sys/socket.h>
+		#include <arpa/inet.h>
 		
 		#include "proto.h"
+		
+		#define IPSTRSIZE 40
 		
 		int main(){
 			
 			int sd;
 			
 			//man 7 ip 中的  Address format
-			struct sockaddr_in laddr;
+			struct sockaddr_in laddr,raddr;
+			//用结构体体接受
+			struct msg_st rbuf;
+			
+			socklen_t raddr_len;
+			
+			char ipstr[IPSTRSIZE];
 			
 			//0: IPPROTO_UDP
 			sd = socket(AF_INET,SOCK_DGRAM,0);
@@ -147,9 +160,17 @@
 				exit(1);
 			}
 			
+			//初始化
+			raddr_len = sizeof(raddr);
+			
 			while(1){
-				recvfrom();
-				printf();
+				recvfrom(sd,&rbuf,sizeof(rbuf),0,(void *)&raddr,);
+				
+				inet_ntop(AF_INET,&radddr.sin_addr,ipstr,IPSTRSIZE);
+				printf("---MESSAGE FROM %s:%d----\n",ipstr,ntohs(raddr.sin_port));
+				printf("NAME = %s\n",rbuf.name);
+				printf("MATH = %d\n",ntohl(rbuf.math));
+				printf("CHINESE = %d\n",ntohl(rbuf.chinese));
 			}
 			
 			close();
@@ -159,6 +180,327 @@
 
 `snder.c`:  
 
+		#include <stdio.h>
+		#include <stdlib.h>
+		#include <sys/types.h>
+		#include <sys/socket.h>
+		#include <arpa/inet.h>
+		#include <string.h>
+		
+		#include "proto.h"
+
+		int main(int argc,char &argv[]){	
+			
+			int sd;
+			
+			//待发送的数据
+			struct msg_st sbuf;
+			//发送给谁
+			struct sockaddr_in raddr;
+			
+			if(argc < 2){
+				fprintf(stderr,"Usage...\n");
+				exit(1);
+			}
+			
+			//获取socket
+			sd = socket(AF_INET,SOCK_DGRAM,0);
+			if(sd < 0){
+				perror("socket()");
+				exit(1);
+			}
+			
+			//bind();
+			
+			strcpy(sbuf.name,"Alan");
+			sbuf.math = htonl(rand()%100);
+			sbuf.chinese = htonl(rand()%100);
+			
+			raddr.sin_family = AF_INET;
+			raddr.sin_port = htons(atoi(RCVPORT));
+			inet_pton(AF_INET,argv[1],&raddr.sin_addr);
+			
+			if(sendto(sd,&sbuf,sizeof(sbuf),0,(void *)&raddr,sizoef(raddr)) < 0){
+			perror("sendto()");
+			exit(1);
+			}
+			
+			puts("ok!");
+			
+			close("sd");
+			
+			close();
+			
+			exit(0);
+		}
+
+####动态报式套接字实例
+
+`proto.h`:
+
+		#ifndef PROTO_H__
+		#define PROTO_H__
+		
+		//设定端口
+		#define RCVPORT		"1989"
+		
+		//这里选择11,地址不对其
+		#define NAMEMAX 	(512-8-8) //512是udp包的推荐长度 8是 uint32_t (math 和 chinese)的定长长度, 后面的8是udp包的报头长度
+		
+		struct msg_st{
+		 
+			uint32_t math;
+			uint32_t chinese;
+			uint8_t  name[1]; //变长结构体,name[1]就是一个占位符
+		
+		}__attribute__((packed));//表示告诉gcc不对齐
+		
+		#endif
+		
+`rcver.c`:
+
+		#include <stdio.h>
+		#include <stdlib.h>
+		#include <sys/types.h>
+		#include <sys/socket.h>
+		#include <arpa/inet.h>
+		
+		#include "proto.h"
+		
+		#define IPSTRSIZE 40
+		
+		int main(){
+			
+			int sd;
+			int size;
+			
+			//man 7 ip 中的  Address format
+			struct sockaddr_in laddr,raddr;
+			//用结构体体接受
+			struct msg_st *rbufp;
+			
+			socklen_t raddr_len;
+			
+			char ipstr[IPSTRSIZE];
+			
+			size = sizeof(struct msg_st) + NAMEMAX - 1;//1 是结构体的NMAE数组占位符
+			rbufp = malloc(size);
+			if(rbufp == NULL){
+				perror("malloc()");
+				exit(1);
+			}
+			
+			//0: IPPROTO_UDP
+			sd = socket(AF_INET,SOCK_DGRAM,0);
+			if(sd < 0){
+				perror("socket()");
+				exit(1);
+			}
+			
+			laddr.sin_family = AF_INET;
+			//htons:换为网络字节顺序
+			laddr.sin_port = htons(atoi(RCVPORT));
+			inet_pton(AF_INET,"0.0.0.0",&laddr.sin_addr); 
+			
+			if(bind(sd,(void *)&laddr,sizeof(laddr)) < 0){
+				perror("bind()");
+				exit(1);
+			}
+			
+			//初始化
+			raddr_len = sizeof(raddr);
+			
+			while(1){
+				recvfrom(sd,rbufp,size,0,(void *)&raddr,);
+				
+				inet_ntop(AF_INET,&radddr.sin_addr,ipstr,IPSTRSIZE);
+				printf("---MESSAGE FROM %s:%d----\n",ipstr,ntohs(raddr.sin_port));
+				printf("NAME = %s\n",rbufp->name);
+				printf("MATH = %d\n",ntohl(rbufp->math));
+				printf("CHINESE = %d\n",ntohl(rbufp->chinese));
+			}
+			
+			close();
+			
+			exit(0);
+		}
+
+`snder.c`:  
+
+		#include <stdio.h>
+		#include <stdlib.h>
+		#include <sys/types.h>
+		#include <sys/socket.h>
+		#include <arpa/inet.h>
+		#include <string.h>
+		
+		#include "proto.h"
+
+		int main(int argc,char &argv[]){	
+			
+			int sd;
+			int size;
+			//待发送的数据,这里改成指针,因为我们已经不能确定长度了(变长结构体)
+			struct msg_st *sbufp;
+			//发送给谁
+			struct sockaddr_in raddr;
+			
+			if(argc < 3){
+				fprintf(stderr,"Usage...\n");
+				exit(1);
+			}
+			
+			//判断名字大小值
+			if(strlen(argv[2]) > NAMEMAX){
+				fprintf(stderr,"Name is too long!\n");
+				exit(1);
+			}
+			
+			//申请内存空间
+			size = sizeof(struct msg_st) + strlen(argv[2]);
+			sbufp = malloc(size);
+			if(sbufp == NULL){
+				perror("malloc()");
+				exit(1);
+			}
+			
+			//获取socket
+			sd = socket(AF_INET,SOCK_DGRAM,0);
+			if(sd < 0){
+				perror("socket()");
+				exit(1);
+			}
+			
+			strcpy(sbufp->name,argv[2]);
+			sbufp->math = htonl(rand()%100);
+			sbufp->chinese = htonl(rand()%100);
+			
+			raddr.sin_family = AF_INET;
+			raddr.sin_port = htons(atoi(RCVPORT));
+			inet_pton(AF_INET,argv[1],&raddr.sin_addr);
+			
+			if(sendto(sd,sbufp,size,0,(void *)&raddr,sizoef(raddr)) < 0){
+			perror("sendto()");
+			exit(1);
+			}
+			
+			puts("ok!");
+			
+			close("sd");
+			
+			close();
+			
+			exit(0);
+		}
+
+
 ###整理知识点
 
 ---
+
+####网络字节顺序和主机字节顺序
+
+**网络字节顺序NBO(Network Byte Order)**
+
+按从高到低的顺序存储,在网络上使用同一的网络字节顺序,可以避免兼容性问题.
+
+**主机字节顺序HBO(Host Byte Order)**
+
+不同的机器,主机字节顺序不同,与CPU设计有关.
+
+####大端模式与小端模式
+
+**概念及详解**
+
+在各种体系的计算机中通常采用的字节存储机制主要有两种: `big-endian`和`little-endian`,即`大端模式`和`小端模式`.
+
+`MSB`(Most Significant Bit)最高有效位  
+`LSB`(Least Significant)最低有效位
+
+**大端模式(big-endian)**
+
+`MSB`存放在最低端的地址上
+
+		双字节数0x1234以big-endian的方式存在起始地址0x00002000中
+		
+		| data |<-- address
+        | 0x12 |<-- 0x00002000
+        | 0x34 |<-- 0x00002001
+        
+       在Big-Endian中,对于bit序列中的序号编排方式如下(以双字节数0x8B8A为例):
+       
+        ----+---------------------------------------------------+
+        bit | 00 01 02 03 04 05 06 07 | 08 09 10 11 12 13 14 15 |
+        ----+MSB---------------------------------------------LSB+
+        val |  1  0  0  0  1  0  1  1 |  1  0  0  0  1  0  1  0 |
+        ----+---------------------------------------------------+
+        = 0x8B8A 
+        
+**小端模式(little-endian)**
+
+`LSB`存放在最低端的地址上.
+
+		双字节数0x1234以little-endian的方式存在起始地址0x00002000中:
+		| data |<-- address
+        | 0x34 |<-- 0x00002000
+        | 0x12 |<-- 0x00002001
+		
+		在Little-Endian中,对于bit序列中的序号编排和Big-Endian刚好相反,其方式如下(以双字节数0x8B8A为例):
+		
+		----+---------------------------------------------------+
+        bit | 15 14 13 12 11 10 09 08 | 07 06 05 04 03 02 01 00 |
+        ----+MSB---------------------------------------------LSB+
+        val |  1  0  0  0  1  0  1  1 |  1  0  0  0  1  0  1  0 |
+        ----+---------------------------------------------------+
+        = 0x8B8A
+        
+**数组在大端小端情况下的存储**
+
+以unsigned int value = 0x12345678为例,分别看看在两种字节序下其存储情况,我们可以用unsigned char buf[4]来表示value:
+
+`Big-Endian`,低地址存放高位,如下:
+
+		高地址
+        ---------------
+        buf[3] (0x78) -- 低位
+        buf[2] (0x56)
+        buf[1] (0x34)
+        buf[0] (0x12) -- 高位
+        ---------------
+        低地址   
+
+`Little-Endian`:低地址存放低位,如下:
+
+		高地址
+        ---------------
+        buf[3] (0x12) -- 高位
+        buf[2] (0x34)
+        buf[1] (0x56)
+        buf[0] (0x78) -- 低位
+        --------------
+        低地址
+        
+####网络字节顺序
+
+**字节内的比特位不受这种顺序的影响**
+
+比如`一个字节` 1000 0000 (或表示为十六进制 80H)不管是什么顺序其内存中的表示法都是这样.
+
+**大于1个字节的数据类型才有字节顺序问题**
+
+比如 Byte A,这个变量只有一个字节的长度,所以根据上一条没有字节顺序问题.所以字节顺序是"字节之间的相对顺序"的意思.
+
+**大于1个字节的数据类型的字节顺序有两种**
+
+比如 short B,这是一个两字节的数据类型,这时就有字节之间的相对顺序问题了.
+
+**网络字节顺序与主机字节顺序**
+
+NBO与HBO网络字节顺序NBO(Network Byte Order):按从高到低的顺序存储,在网络上使用统一的网络字节顺序,可以避免兼容性问题.主机字节顺序(HBO，Host Byte Order):不同的机器HBO不相同,与CPU设计有关计算机数据存储有两种字节优先顺序:
+
+* 高位字节优先
+* 低位字节优先
+
+Internet上数据以高位字节优先顺序在网络上传输,所以对于在内部是以低位字节优先方式存储数据的机器,在Internet上传输数据时就需要进行转换. 
+  
+                            
