UNIX/Linux 环境高级C语言系统开发: 套接字-多播实例2 和 套接字-抓包器wireshark的使用

--- a/UNIX:Linux 环境高级C语言系统开发/48_网络编程专题.md
+++ b/UNIX:Linux 环境高级C语言系统开发/48_网络编程专题.md
@@ -14,6 +14,10 @@
 
 [套接字-多播实例2](http://www.wyzc.com/play/8704/2403/#9117 "套接字-多播实例2")
 
+[套接字-抓包器wireshark的使用](http://www.wyzc.com/play/8704/2403/#9118 "套接字-抓包器wireshark的使用")
+
+[UDP传输分析](http://www.wyzc.com/play/8704/2403/#9119 "UDP传输分析")
+
 ###笔记
 
 ---
@@ -87,6 +91,7 @@
 	* 全网广播
 	* 子网广播
 * 多播/组播(建立一个多播组,组间发布消息,不远接收离开组)
+	* `224.0.0.1`: 所有支持多播的节点都默认在这个组当中且无法离开
 
 **流式套结字**
 
@@ -232,6 +237,9 @@
 			}
 			
 			//bind();
+			
+			//防止内存泄露,因为我们定义了(在头文件)name为11字符,Alan占据不全,所以我们初始化
+			memset(&sbuf,'\0',sizeof(sbuf));
 			
 			strcpy(sbuf.name,"Alan");
 			sbuf.math = htonl(rand()%100);
@@ -416,6 +424,8 @@
 
 ####套接字-多播实例
 
+**广播**
+
 `proto.h`:
 
 		#ifndef PROTO_H__
@@ -543,6 +553,7 @@
 			
 			//bind();
 			
+			memset(&sbuf,'\0',sizeof(sbuf)); 
 			strcpy(sbuf.name,"Alan");
 			sbuf.math = htonl(rand()%100);
 			sbuf.chinese = htonl(rand()%100);
@@ -550,7 +561,7 @@
 			raddr.sin_family = AF_INET;
 			raddr.sin_port = htons(atoi(RCVPORT));
 			
-			//255.255.255.255 向全网发送
+			//255.255.255.255 向全网发送,广播
 			inet_pton(AF_INET,"255.255.255.255",&raddr.sin_addr);
 			
 			if(sendto(sd,&sbuf,sizeof(sbuf),0,(void *)&raddr,sizoef(raddr)) < 0){
@@ -566,7 +577,178 @@
 			
 			exit(0);
 		}
+		
+**多播**
 
+发送方创建多播组,发送组间消息.接收方,加入多播组,接收消息.
+
+`proto.h`:
+
+		#ifndef PROTO_H__
+		#define PROTO_H__
+		
+		//多播组的组号
+		#define MTGROUP	"224.2.2.2"
+		//设定端口
+		#define RCVPORT		"1989"
+		
+		//这里选择11,地址不对其
+		#define NAMESIZE	11
+		
+		struct msg_st{
+		 
+			uint8_t name[NAMESIZE];
+			uint32_t math;
+			uint32_t chinese;
+		
+		}__attribute__((packed));//表示告诉gcc不对齐
+		
+		#endif
+		
+`rcver.c`:
+
+		#include <stdio.h>
+		#include <stdlib.h>
+		#include <sys/types.h>
+		#include <sys/socket.h>
+		#include <arpa/inet.h>
+		
+		#include "proto.h"
+		
+		#define IPSTRSIZE 40
+		
+		int main(){
+			
+			int sd;
+			
+			//man 7 ip 中的  Address format
+			struct sockaddr_in laddr,raddr;
+			//用结构体体接受
+			struct msg_st rbuf;
+			
+			socklen_t raddr_len;
+			
+			char ipstr[IPSTRSIZE];
+			
+			//0: IPPROTO_UDP
+			sd = socket(AF_INET,SOCK_DGRAM,0);
+			if(sd < 0){
+				perror("socket()");
+				exit(1);
+			}
+			
+			strcut ip_mreqn mreq;
+			//成员初始化
+			inet_pton(AF_INET,MTGROUP,&mreq.imr_multiaddr);
+			//"0.0.0.0 是任意地址"
+			inet_pton(AF_INET,"0.0.0.0",&mreq.imr_address);
+			mreq.imr_ifindex = if_nametoindex("etho0");
+			
+			//加入多播组
+			if(setsockopt(sd,IPPROTO_IP,IP_ADD_MEMBERSHIP,$mreq,sizeof(mreq)) < 0){
+				perror("setsockopt()");
+				exit(1);
+			}
+			
+			laddr.sin_family = AF_INET;
+			//htons:换为网络字节顺序
+			laddr.sin_port = htons(atoi(RCVPORT));
+			inet_pton(AF_INET,"0.0.0.0",&laddr.sin_addr); 
+			
+			if(bind(sd,(void *)&laddr,sizeof(laddr)) < 0){
+				perror("bind()");
+				exit(1);
+			}
+			
+			//初始化
+			raddr_len = sizeof(raddr);
+			
+			while(1){
+				recvfrom(sd,&rbuf,sizeof(rbuf),0,(void *)&raddr,);
+				
+				inet_ntop(AF_INET,&radddr.sin_addr,ipstr,IPSTRSIZE);
+				printf("---MESSAGE FROM %s:%d----\n",ipstr,ntohs(raddr.sin_port));
+				printf("NAME = %s\n",rbuf.name);
+				printf("MATH = %d\n",ntohl(rbuf.math));
+				printf("CHINESE = %d\n",ntohl(rbuf.chinese));
+			}
+			
+			close();
+			
+			exit(0);
+		}
+
+`snder.c`:  
+
+		#include <stdio.h>
+		#include <stdlib.h>
+		#include <sys/types.h>
+		#include <sys/socket.h>
+		#include <arpa/inet.h>
+		#include <string.h>
+		
+		#include "proto.h"
+
+		int main(int argc,char &argv[]){	
+			
+			int sd;
+			
+			//待发送的数据
+			struct msg_st sbuf;
+			//发送给谁
+			struct sockaddr_in raddr;
+		
+			//获取socket
+			sd = socket(AF_INET,SOCK_DGRAM,0);
+			if(sd < 0){
+				perror("socket()");
+				exit(1);
+			}
+			
+			struct ip_mreqn mreq;
+			
+			//初始化结构体的成员
+			inet_pton(AF_INET,MTGROUP,&mreq.imr_multiaddr);
+			inet_pton(AF_INET,"0.0.0.0",&mreq.imr_address);
+			
+			//if_nametoindex 提取网络设备的索引号
+			//网络设备的索引号就是 ifconfig 返回网卡前面的序号
+			&mreq.imr_ifindex = if_nametoindex("etho0");//网络索引号
+	
+			//创建多播组
+			if(setsockopt(sd,IPPROTO_TP,IP_MULTCAST_IF,&mreq,sizeof(mreq)) < 0){
+			//失败
+			perror("setsockopt()");
+			exit(1);
+			}
+			
+			//bind();
+			
+			memset(&sbuf,'\0',sizeof(sbuf)); 
+			strcpy(sbuf.name,"Alan");
+			sbuf.math = htonl(rand()%100);
+			sbuf.chinese = htonl(rand()%100);
+			
+			raddr.sin_family = AF_INET;
+			raddr.sin_port = htons(atoi(RCVPORT));
+			
+			//向多播组发送在头文件中已经定义过的 MTROUP
+			inet_pton(AF_INET,MTGROUP,&raddr.sin_addr);
+			
+			if(sendto(sd,&sbuf,sizeof(sbuf),0,(void *)&raddr,sizoef(raddr)) < 0){
+			perror("sendto()");
+			exit(1);
+			}
+			
+			puts("ok!");
+			
+			close("sd");
+			
+			close();
+			
+			exit(0);
+		}
+	
 ###整理知识点
 
 ---
