linux-马哥视频 16_01_bash脚本编程之十四 信号捕捉及系统管理之任务计划

--- a/linux-马哥视频/16_01_bash脚本编程之十四_信号捕捉及系统管理之任务计划.md
+++ b/linux-马哥视频/16_01_bash脚本编程之十四_信号捕捉及系统管理之任务计划.md
@@ -8,6 +8,458 @@
 
 变量中字符的长度: `${#VARNAME}`
 
+		[chloroplast@iZ94xwu3is8Z ~]$ A='hello world'
+		[chloroplast@iZ94xwu3is8Z ~]$ echo ${#A}
+		11
+
+####交叉编译
+
+用`A`平台编译非`A`平台的编译方式叫做**交叉编译**,例如在`x86`平台上编译`arm`平台运行的东西.
+
+		make ARCH=xxx
+		
+####变量赋值
+
+**`${parameter:-word}`**
+
+`最常用`
+
+如果`parameter`为空或未定义,则变量展开为`word`;否则,展开为`parameter`的值.不会改变变量自身的值.
+
+		[chloroplast@iZ94xwu3is8Z ~]$ A=3
+		[chloroplast@iZ94xwu3is8Z ~]$ echo ${A:-30}
+		3
+		[chloroplast@iZ94xwu3is8Z ~]$ unset A
+		[chloroplast@iZ94xwu3is8Z ~]$ echo ${A:-30}
+		30
+		[chloroplast@iZ94xwu3is8Z ~]$ echo $A
+		//A的值为空
+		[chloroplast@iZ94xwu3is8Z ~]$
+		
+		[chloroplast@iZ94xwu3is8Z ~]$ A=${A:-30}
+		[chloroplast@iZ94xwu3is8Z ~]$ echo $A
+		30
+		
+**`${parameter:+word}`**
+
+如果`parameter`为空或未定义,不做任何操作;否则,则展开为`word`的值.
+
+		[chloroplast@iZ94xwu3is8Z ~]$ unset A
+		[chloroplast@iZ94xwu3is8Z ~]$ echo ${A:+30}
+		
+		[chloroplast@iZ94xwu3is8Z ~]$
+		[chloroplast@iZ94xwu3is8Z ~]$ A=3
+		[chloroplast@iZ94xwu3is8Z ~]$ echo ${A:+30}
+		30
+
+**`${parameter:=word}`**
+
+如果`parameter`为空或未定义,则变量展开为`word`,并将张开后的值赋值给`parameter`.
+
+		[chloroplast@iZ94xwu3is8Z ~]$ unset A
+		[chloroplast@iZ94xwu3is8Z ~]$ echo ${A:=30}
+		30
+		[chloroplast@iZ94xwu3is8Z ~]$ echo $A
+		30
+
+**`${parameter:offset}` `${parameter:offset:length}`**
+
+取子串,从`offset`处的后一个字符开始,取`length`长的子串.字符串切片.
+		
+		[chloroplast@iZ94xwu3is8Z ~]$ A='hello world'
+		[chloroplast@iZ94xwu3is8Z ~]$ echo ${A:2:3}//从第3个开始(偏移2个),取3个
+		llo
+		[chloroplast@iZ94xwu3is8Z ~]$ echo ${A:2}
+		llo world
+						
+####脚本配置文件
+
+`/etc/rc.d/init.d`服务脚本 
+
+服务脚本支持配置文件: `/etc/sysconfig/服务脚本同名的配置文件`						
+**示例**
+
+`a.sh`:
+
+		#!/bin/bash
+		#
+		
+		#使用source加载配置文件
+		. ~/a.conf
+		
+		TEST=${TEST:-info}
+		
+		#TEST 不为空,输出TEST
+		[ -n "$TEST" ] && echo $TEST
+					
+`a.conf`:
+
+		TEST='hello world'
+				
+`运行`:
+
+		[chloroplast@iZ94xwu3is8Z ~]$ chmod +x ./a.conf
+		[chloroplast@iZ94xwu3is8Z ~]$ ./a.sh
+		hello world				
+
+####local局部变量,变量的作用域
+
+`local VAR_NAME=`	
+
+**示例(函数变量名和全局变量名重名)**
+
+`b.sh`
+
+		#!/bin/bash
+		#
+		 
+		a=1
+		
+		test() {
+			a=$[3+4]
+		}
+		
+		test
+		
+		for I in `seq $a 10`; do
+			echo $I
+		done				
+				
+`运行`:
+
+		[chloroplast@iZ94xwu3is8Z ~]$ chmod +x ./b.sh
+		[chloroplast@iZ94xwu3is8Z ~]$ ./b.sh
+		7
+		8
+		9
+		10						
+			
+**`local`关键字解决局部变量问题**
+
+`b.sh`
+
+		#!/bin/bash
+		#
+		 
+		a=1
+		
+		test() {
+			local a=$[3+4]
+		}
+		
+		test
+		
+		for I in `seq $a 10`; do
+			echo $I
+		done				
+				
+`运行`:
+
+		[chloroplast@iZ94xwu3is8Z ~]$ ./b.sh
+		1
+		2
+		3
+		4
+		5
+		6
+		7
+		8
+		9
+		10
+
+####命令`mktemp`
+
+创建临时文件或目录
+
+`tmp`目录没个30天,没有访问过的会被清理掉.
+
+`mktemp` `/tmp/file.XXXX` (`XXXX`的个数代表生成文件名随机字符串的个数) 
+
+		[chloroplast@iZ94xwu3is8Z ~]$ mktemp /tmp/file.XXXX
+		/tmp/file.ScnQ
+		[chloroplast@iZ94xwu3is8Z ~]$ mktemp /tmp/file.XXXX
+		/tmp/file.UHiL
+		
+**保存到变量**
+
+		[chloroplast@iZ94xwu3is8Z ~]$ FILE=`mktemp /tmp/file.XXXX`
+		[chloroplast@iZ94xwu3is8Z ~]$ echo $FILE
+		/tmp/file.U8ZO		
+
+**创建临时目录(`-d`)**
+
+		`mktemp` `-d`
+
+####信号
+
+进程间通信的一种方式.发送信号使用 `kill -SIGNAL PID`.
+
+`Ctrl+c`: 终止,`2`号信号,SIGINT.
+
+脚本中,能实现信号捕捉,但是`9`和`15`无法捕捉(因为会导致进程无法关闭掉).
+
+**`trap`**
+
+trap命令: 信号捕捉
+
+`trap` `'COMMAND'` 信号列表
+
+**示例:一个脚本每隔2秒中显示当前时间**
+
+`showdate.sh`:
+
+		#!/bin/bash
+		#
+		
+		trap 'echo "You go..."' INT
+		
+		while :; do
+			date
+			sleep 2
+		done
+		
+按`Ctrl+z`终止,`kill %1`(终止掉作业号为`1`的`job`) 关闭该进程
+
+**示例:ping**
+
+这个脚本不能终止,因为`Ctrl+c`命令默认会被ping命令接收.所以我们要手动捕捉信号,让其停止.
+
+`ping.sh`:
+
+		#!/bin/bash
+		#
+		
+		NET=192.168.0
+		
+		FILE=`mktemp /tmp/file.XXXXXX`
+				
+		clearup(){
+			echo "quit.."
+			rm -f $FILE 
+			exit 1
+		}
+		
+		trap `clearup` INIT
+		
+		for I in {200..254}; do
+			if ping -c 1 -W 1 $NET.$I &> /dev/null; then
+				echo "$NET.$I is up." | tee >> $FILE
+			else
+				echo "$NET.$I is down."
+				
+		done		
+
+####一行执行多个语句,语句用分号分隔
+
+####任务计划
+
+1. 在未来的某个时间点执行`一次`某任务.
+	* at
+	* batch	
+2. 周期性的执行某任务.
+	* cron 
+
+**`at`和`batch`**
+
+`at` `时间`
+
+		at> COMMAND
+		at> Ctrl+d(提交)
+
+指定时间:
+
+* 绝对时间: `HH:MM`(最近一次的时间,因为没有指定具体的日期),`DD.MM.YY`,`MM/DD/YY`
+* 相对时间: `new+#` 
+	* 单位: `minutes`,`hours`,`days`,`weeks`
+* 模糊时间: `noon`,`midnight`,`teatime`
+
+命令的执行结果,将以邮件的形式发送给安排任务的用户.
+
+**常用命令**
+
+* `at -l` = `atq`: 显示作业
+* `at -d 作业号 ` = `atrm 作业号`: 删除作业
+
+**`batch`**
+
+不需要指定时间,自动选择系统较空闲的时候执行任务. 
+
+**`/etc/at.deny` 和 `/etc/at.allow`**
+
+使用`at`的 黑名单 和 白名单.
+
+如果两个文件都存在,只有`allow`生效.
+
+如果两个文件都不存在,只有`root`用户生效.
+
+如果`deny`文件存在且为空,那么所有人都可以使用.这个是默认配置.
+
+**`cron`**
+
+cron: 自身是一个不间断运行的服务.
+
+* `系统cron任务`: 操作系统周期运行的任务. 定义在`/etc/crontab`
+	
+		分钟 小时 天 月 周 用户 任务
+	
+* `用户cron任务`: `/var/spool/cron/USERNAME`
+
+		分钟 小时 天 月 周 任务
+
+有效取值范围:
+
+* `分钟`: 0-59
+* `小时`: 0-23
+* `天`: 1-31
+* `月`: 1-12
+* `周`: 0-7 (0 和 7都表示周日)
+
+时间通配表示:
+
+* `*`: 对应的所有有效取值:
+
+		3 * * * * : 每小时的第3分钟执行
+		3 * * * 7 : 每周日的每小时的第3分钟执行
+		13 12 * * * : 每天12点13分执行
+		
+* `,`: 离散时间点:
+
+		10,40 * * * * : 每小时第10分,第40分
+		10,40 * * * 2,5 : 每周二每周五的每小时第10分,第40分
+
+* `-`: 连续时间点:
+
+		10 02 * * * 1-5 : 每周一到周五2点10分执行
+
+* `/#`: 对应取值范围内每多久一次
+	
+		*/3 * * * * : 每3分钟执行一次
+
+`示例:每两小时执行一次`
+
+		01 */2 * * * 
+
+执行结果和`at`一样,以邮件形式发送给管理员
+
+		*/3 * * * * /bin/cat /etc/fstab > /dev/null
+		
+`> /dev/null` 这样正常结果会发送到 `/dev/null`,错误结果会发送邮件
+
+		*/3 * * * * /bin/cat /etc/fstab &> /dev/null
+		
+正常结果,错误结果都不发送邮件,发送到`/dev/null`.
+
+**cron的环境变量**
+
+cron执行的所有命令都去`PATH`环境变量指定的路径下区找.
+
+`PATH`: /bin:/sbin:/usr/bin:/usr/sbin
+
+所以cron内的变量最好都用绝对路径.用户登录下可以执行的命令,未必cron就能执行.
+
+写脚本时候,使用脚本自身的环境变量：
+
+		#!/bin/bash
+		export PATH=
+		
+`系统cron`:
+
+		[chloroplast@iZ94xwu3is8Z ~]$ cat /etc/crontab
+		SHELL=/bin/bash
+		PATH=/sbin:/bin:/usr/sbin:/usr/bin
+		MAILTO=root
+		
+		# For details see man 4 crontabs
+		
+		# Example of job definition:
+		# .---------------- minute (0 - 59)
+		# |  .------------- hour (0 - 23)
+		# |  |  .---------- day of month (1 - 31)
+		# |  |  |  .------- month (1 - 12) OR jan,feb,mar,apr ...
+		# |  |  |  |  .---- day of week (0 - 6) (Sunday=0 or 7) OR sun,mon,tue,wed,thu,fri,sat
+		# |  |  |  |  |
+		# *  *  *  *  * user-name  command to be executed
+
+* `SHELL`: 定义使用哪个shell,用作解析器解析命令
+* `PATH`: 系统环境变量PATH
+* `MAILTO`: 邮件发给谁	
+
+**用户cron任务的管理**
+
+* `crontab -l`: 列出用户的所有cron任务.
+* `crontab -e`: 编辑定义用户的cron任务.
+* `crontab -r`: 移除所有任务.
+* `crontab -u USERNAME`: 管理其他用户的cron任务.
+		
+		//编辑xxx用户的cron任务
+		crontab -u xxx -e	
+	
+
+**`anacron`**
+
+`anacron` 是 `cron`的补充,能够实现让`cron`因为各种原因在过去的时间该执行未执行的任务,在恢复正常后正常执行一次.
+
+服务器上默认是不启动的.
+
+要确保`cron`服务运行.
+
 ###整理知识点
 
 ---
+
+####`chkconfig`
+
+`chkconfig`可以方便的设置和查询不同运行级上的系统服务.提供一种简单的命令行工具来帮助管理员对`/etc/rc[0-6].d`目录层次下的众多的符号链接进行直接操作.
+
+默认情况下,`on`或`off`选项仅对`2,3,4,5`有影响,而`reset`影响所有的运行级.`--level`选项可以被用于指定哪个运行级别接收影响.
+
+对于每个服务,每个运行级都有一个开始脚本和一个结束脚本.当开或关一个运行级时,init不会重新开始一个已经运行的服务,也不会重新停止一个未运行的服务.
+
+**运行级别**
+
+* `0`: 系统停机状态,系统默认运行级别不能设置为0,否则不能正常启动,机器关闭.
+* `1`: 单用户工作状态,root权限,用于系统维护,禁止远程登陆,就像Windows下的安全模式登录.
+* `2`: 多用户状态,没有NFS支持.
+* `3`: 完整的多用户模式,有NFS,登陆后进入控制台命令行模式.
+* `4`: 系统未使用,保留一般不用,在一些特殊情况下可以用它来做一些事情.例如在笔记本电脑的电池用尽时,可以切换到这个模式来做一些设置.
+* `5`: X11控制台,登陆后进入图形GUI模式,X Window系统.
+* `6`: 系统正常关闭并重启,默认运行级别不能设为6,否则不能正常启动.运行`init 6`机器就会重启.
+
+**运行级别原理**
+
+1. 在目录`/etc/rc.d/init.d`下有许多服务器脚本程序,一般称为服务(service).
+2. 在`/etc/rc.d`下有`7`个名为`rcN.d`的目录,对应系统的7个运行级别.
+3. `rcN.d`目录下都是一些符号链接文件,这些链接文件都指向`init.d`目录下的`service`脚本文件,命名规则为`K+nn+服务名`或`S+nn+服务名`,其中nn为两位数字.
+4. 系统会根据指定的运行级别进入对应的`rcN.d`目录,并按照文件名顺序检索目录下的链接文件:
+	* 对于以`K`开头的文件,系统将终止对应的服务.
+	* 对于以`S`开头的文件,系统将启动对应的服务.
+5. 查看运行级别用`runlevel`
+6. 进入其它运行级别用:`init N`,如init 3则进入终端模式,init 5则又登录图形GUI模式
+7. `init0`为关机,`init6`为重启系统.
+
+**选项**
+
+* `--level #`: 指定一个运行级别适合的操作.范围`0-7`.
+* `--add name`: 增加一个新的服务.
+* `--del name`: 删除一个服务.
+* `--list name`: 显示服务的情况.
+
+**使用范例**
+
+		chkconfig --list        #列出所有的系统服务
+		chkconfig --add httpd        #增加httpd服务
+		chkconfig --del httpd        #删除httpd服务
+		chkconfig --level httpd 2345 on        #设置httpd在运行级别为2、3、4、5的情况下都是on（开启）的状态
+		chkconfig --list        #列出系统所有的服务启动情况
+		chkconfig --list mysqld        #列出mysqld服务设置情况
+		chkconfig --level 35 mysqld on        #设定mysqld在等级3和5为开机运行服务，--level 35表示操作只在等级3和5执行，on表示启动，off表示关闭
+		chkconfig mysqld on        #设定mysqld在各等级为on，“各等级”包括2、3、4、5等级
+
+
+####`&>`和`>`
+
+`&>`等于`2>&1`, `>`等于`1>`.
+
+`&1` 更准确的说应该是文件描述符 1(标准输出).
+
+`2>&1`:`2`(错误输出).把`标准出错重定向到标准输出`.
