网络HTTP、TCP、UDP、Socket 知识总结

--- a/UNIX:Linux 环境高级C语言系统开发/48_网络编程专题.md
+++ b/UNIX:Linux 环境高级C语言系统开发/48_网络编程专题.md
@@ -18,6 +18,8 @@
 
 [UDP传输分析](http://www.wyzc.com/play/8704/2403/#9119 "UDP传输分析")
 
+[停等式流控解析](http://www.wyzc.com/play/8704/2403/#9120 "停等式流控解析")
+
 ###笔记
 
 ---
@@ -748,6 +750,20 @@
 			
 			exit(0);
 		}
+	
+####UDP传输分析
+
+丢包是由阻塞造成的.
+
+TTL: Time To Live,以当前跳转路由(经过路由)个数为单位(而不是时间).linux 默认64.丢包现象不是由于TTL耗尽.
+
+流控	
+	
+####停等式流控解析
+
+包要加编号.
+
+ack要加编号.	
 	
 ###整理知识点
 
