匿名和闭包以及附加状态

--- a/Modern PHP/第二章_特性.md
+++ b/Modern PHP/第二章_特性.md
@@ -165,15 +165,18 @@ Generator 对象**不能**通过 `new` 实例化.
 		
 		//迭代器是一个属于`Generator`类的对象
 		var_dump( myGenerator() instanceof Generator);
+		//true
 		
-		//尝试调用`Generator`的方法,
-		//会依次输出:
-		//string(3) "one"
-		//string(3) "two"
+		
 		$a = myGenerator();
 		var_dump( $a->current() );
 		$a->next();
 		var_dump( $a->current() );
+		//尝试调用`Generator`的方法,
+		//会依次输出:
+		//string(3) "one"
+		//string(3) "two"
+		
 		
 		//尝试使用foreach调用生成器
 		//会依次输出:
@@ -207,3 +210,234 @@ Generator 对象**不能**通过 `new` 实例化.
 一个包含yeild的php函数,就是协程,他有阶段性的结算值 `yield $var`,但是代码并`不返回`,php的调度者接到这个值后,喂给一个generator,generator是个实现了iterator接口的+和协程通讯接口(比如send方法)的实例,所以可以用在for循环里.那么gnenerator收到了这个协程的阶段性的值后,他喂给for循环,等for循环下一次循环的时候,他又启动这个协程,协程从上次中断的点继续执行,继续计算,继续yeild值给generator,generator喂for循环,继续循环,直到协程执行完毕.
 
 
+**yield 双工通信**
+
+`The return value of yield is whatever was passed to ->send()`.
+
+通过调用生成器的send()方法传递数据给协程.下面的logger()协程是这种通信如何运行的例子:
+
+		function myGenerator()
+		{
+			$i = 0;
+		    while (true) {
+		    	$ret = (yield 'yield'.$i);
+		    	var_dump($ret);
+		    	$i++;
+		    }
+		}
+		
+		$a = myGenerator();
+		var_dump($a->current());
+		var_dump('----');
+		var_dump($a->send('tt'));
+		var_dump('----');
+		var_dump($a->send('aa'));
+		var_dump('----');
+		var_dump($a->send('bb'));
+		var_dump('----');
+		
+		输出:
+		//执行$a->current,我们输出yield0($i=0),然后停止,因为遇见yield表达式
+		string(6) "yield0"
+		string(4) "----"
+		//我们通过send送入"tt",这个会做为yield的表达式返回,$ret="tt",然后执行$i++,输出yield1,遇见yield停止
+		string(2) "tt"
+		string(6) "yield1"
+		string(4) "----"
+		//我们通过send送入"aa",这个会做为yield的表达式返回,$ret="tt",然后执行$i++,输出yield2,遇见yield停止
+		string(2) "aa"
+		string(6) "yield2"
+		string(4) "----"
+		string(2) "bb"
+		string(6) "yield3"
+		string(4) "----"
+		
+这里我们先调用了$a->current(),否则我们的`yield0`不会没输出,因为`Generator::send()`,如果当这个方法被调用时,`生成器不在 yield 表达式`,那么在传入值之前,**它会先运行到第一个 yield 表达式**.不必要在去调用`Generator::next()`
+
+If the generator is not at a yield expression when this method is called, it will first be let to advance to the first yield expression before sending the value. As such it is not necessary to "prime" PHP generators with a Generator::next() call 
+
+###闭包和匿名函数
+
+`闭包` 和 `匿名函数`是在PHP 5.3.0中引入.
+
+**闭包**
+
+闭包是指在创建时`封装周围状态的函数`.即便闭包所在的环境不存在了,比保重封装的状态依然存在.
+
+**匿名函数**
+
+匿名函数就是没有名称的函数.匿名函数可以赋值给变量,还能像其他任何PHP对象那样传递.
+
+匿名函数特别适合作为函数或方法的回调.
+
+**Closure**
+
+闭包和匿名函数其实就是伪装成函数的对象, 它们是`Closure`类的实例.
+
+**闭包和匿名函数的区别**
+
+匿名函数没有名称
+
+**闭包示例**
+
+		$closure = function ($name) {
+			return sprintf('Hello %s', $name);
+		};
+		
+		echo $closure("Jash");
+		
+		输出:
+		Hello Jash
+		
+		echo $closure instanceof Closure;
+		输出:
+		1
+		
+		
+		
+$closure 变量实现了__invoke()魔术方法,只要变量名后由(),PHP就会查找并调用`__invoke()`方法.		
+		
+**匿名函数示例**
+
+		$numberPlusOne = array_map(function ($number) {
+			return $number+1;
+		}, [1,2,3]);
+		
+		print_r($numberPlusOne);
+		
+		输出:
+		Array
+		(
+		    [0] => 2
+		    [1] => 3
+		    [2] => 4
+		)
+		
+如果不使用匿名函数,使用具名回调:
+
+		function incrementNumber ($number) {
+			return $number+1;
+		}
+	
+		$numberPlusOne = array_map('incrementNumber', [1,2,3]);	
+		print_r($numberPlusOne);
+
+这样会引起,`回调的实现和使用现场隔离开了`.
+
+####附加状态
+
+**use**
+
+使用`use`关键字附加闭包的状态:
+
+		function enclosePerson ($name) {
+
+			return function ($doCommand) use ($name) {
+				return sprintf("%s, %s", $name, $doCommand);
+			};
+		}
+		
+		$clay = enclosePerson('Clay');
+		
+		echo $clay('get me sweet tea!');
+		
+		输出:
+		Clay, get me sweet tea!
+		
+这个闭包封装了$name参数. 即便返回的闭包对象跳出了enclosePerson()函数的作用域, 它也会记住$name参数值, 因为$name变量仍在闭包中.
+
+**bindTo()**
+
+闭包对象的又一个`__invoke()`方法和`bindTo()`方法.
+
+可以使用`bindTo()`把`Closure`对象的内部状态绑定到其他对象上.
+
+路由示例:
+
+		class App
+		{
+			protected $routes = array();
+			protected $status = '200 OK';
+			protected $contentType = 'text/html';
+		
+			public function addRoute($routePath, $routeCallback)
+			{
+				$this->routes[$routePath] = $routeCallback->bindTo($this, __CLASS__);
+			}
+		
+			public function dispatch($currentPath)
+			{
+				foreach ($this->routes as $routePath => $callback) {
+					if ($routePath == $currentPath) {
+						$callback();
+					}
+				}
+		
+				echo $this->contentType, PHP_EOL;	
+				echo $this->status, PHP_EOL;
+			}
+		}
+		
+		$app = new App();
+		
+		$app->addRoute('/users/josh', function() {
+			$this->contentType = 'application/json;charset=utf8';
+			$this->status = '201 created';
+		});
+		
+		$app->dispatch('/users/josh');
+		
+		输出:
+		application/json;charset=utf8
+		201 created
+		
+我们看见把匿名函数绑定到该App对象上, 则可以调用其属性.
+
+`bindTo()示例`:
+
+		class Father
+		{
+			protected $name = 'father';
+			private $callBack;
+		
+			public function bind($callBack)
+			{	
+				$this->callBack = $callBack->bindTo($this, __CLASS__);
+			}
+		
+			public function run()
+			{	
+				//这样调用我再5.6内是报错的,单式7.0.3没问题
+				($this->callBack)();
+				echo $this->name, PHP_EOL;
+			}
+		}
+		
+		
+		$father = new Father();
+		
+		$func = function() {
+			$this->name='test';
+		};
+		
+		$father->bind($func);
+		
+		$father->run();
+
+`bind()示例`:
+
+		class Father
+		{
+			protected $name = 'father';
+		}
+		
+		$func = function() {
+			return $this->name;
+		};
+		$bcl2 = Closure::bind($func, new Father(), 'Father');
+		echo $bcl2(), "\n";
+		
+		输出:
+		father
+	
+			
