--- a/linux-马哥视频/17_01_rhel5.8系统安装及kickstart.md
+++ b/linux-马哥视频/17_01_rhel5.8系统安装及kickstart.md
@@ -40,7 +40,7 @@ ks文件的三个部分:
 
 安装过程中boot提示符可以使用的命令:
 
-* dd: 装载额外的驱动程序
+* dd=: 装载额外的驱动程序
 * askmethod
 * ip=
 * netmask=: 指定子网掩码
@@ -55,16 +55,75 @@ ks文件的三个部分:
 
 **ks文件的命令段**
 
-两类命令:
+两类命令: 必备命令和可选命令
 
-* 必备命令
-	* keyboard 键盘类型
-	* lang 语言
-	* timezone 时区
-	* rootpw 管理员密码
-	* authconfig --useshadow 认证方式
-	* bootloader --location 装载,引导加载器 
-* 可选命令
+* `keyboard` 键盘类型
+	* `us` 美式键盘
+* `lang` 语言 (命令`locale -a`: 现实所有可支持的语言)
+	* `en_US`
+	* `zh_CN`(`zh_CN.字符集(gbk,gb2312,gb18030,utf8)`)
+* `timezone` 时区
+* `rootpw` 管理员密码
+* `authconfig` --useshadow 认证方式
+* `bootloader` --location 装载,引导加载器 
+* `clearpart` 指定分区的清除方式,已经是否初始化标记(标记:分区表的类型)
+	* --none 默认不清除使用空闲分区 
+	* --initlabel(如果没有合法的有效的分区表,初始化一个分区表,对于一个完全全新的系统游泳) 
+	* --linux(清除所有linux分区)
+* `driverdisk` 指定驱动磁盘
+	* --source= 指定镜像位置
+* `firewall` 是否启用防火墙
+	* --enable(d) 启用
+	* --disable(d) 禁用
+* `firstboot` 第一次启动的配置信息(disable可以禁用配置)
+	* --disable(d)
+* `halt` 系统安装之后 关机,类似命令(`poweroff`:关机,`reboot`重启,`shutdown`关机)
+* `graphical`(默认): 安装过程图形化界面,类似命令(`text`: 文本界面)  
+* `install | upgrades `: 安装 或者 升级
+* `key` 秘钥 
+	* `--skip` 跳过提供秘钥
+* `logvol` 指定逻辑卷
+* `part | partition` (只在install有用, upgrades忽略) 创建分区,指定分区,挂载点和设备.
+	* `--size` 指定大小
+	* `--grow` 是否可以自动扩展到所有可用空间
+	* `--maxsize` 最大空间是多少
+	* `--ondisk` 在哪个磁盘上创建
+	* `--fstype` 文件系统类型
+	* `--start` 从哪个柱面开始
+	* `--end` 从哪个柱面结束
+	* `--label` 卷标  
+			
+			part /boot --fstype ext3 --size=100
+			指定挂载点,文件类型和大小
+			
+			part pv.100000 --size=40960
+			创建物理卷, 100000为pv的id号,只要不重复即可
+			
+			part swap --size=1024
+			创建swap分区
+			
+			volgroup vol0 --pesize=32768 pv.100000
+			创建卷组,卷组名称 vol0, pe大小为32768kb 
+			
+			logvol / --fstype ext3 --name=root --vgname=vol0 --size=32000
+			创建逻辑卷,挂载点是 / ,文件类型是 ext3,逻辑卷的名字是root,在那个卷组中创建,大小为32000
+
+* `network` 配置网络属性 
+	* `--bootproto` 引导协议 （dhcp 自动, static 手动, bootp(dhcp是bootp的增强版)） 
+	* `--device` 指定配置到哪个网卡
+* `rootpw` 指定管理员密码 
+	* `--iscrypted` 指定加密 
+* `selinux`
+	* `--disabled | --permissive` 
+* `timezone` 时区
+	* `Asia/Shanghai` 使用亚洲上海时区
+ 
+**ks检查工具**
+
+ksvalidator 检查ks文件的语法
+
+		yum install system-config-kickstart
+		ksvalidator xxxx 	
 
 ###整理知识点
 
