更新LVM相关术语解释

--- a/linux-马哥视频/10_03_lvm之一.md
+++ b/linux-马哥视频/10_03_lvm之一.md
@@ -158,3 +158,42 @@ Device Mapper 设备映射. 提供逻辑设备
 ###整理知识点
 
 ---
+
+####图示
+
+![](./img/10_03_10.jpg "")
+
+####LVM几个术语
+
+**物理存储介质(PhysicalStorageMedia)**
+
+指系统的物理存储设备: 磁盘,如: /dev/hda、/dev/sda等,是存储系统最底层的存储单元.
+
+**物理卷(Physical Volume,`PV`)**
+
+物理卷在逻辑卷管理系统最底层,可为整个物理硬盘或实际物理硬盘上的分区.
+
+**卷组(Volume Group,`VG`)**
+
+卷组建立在物理卷上,一卷组中至少要包括一物理卷,卷组建立后可动态的添加卷到卷组中,一个逻辑卷管理系统工程中可有多个卷组.
+
+**逻辑卷(Logical Volume,`LV`)**
+
+逻辑卷建立在卷组基础上,卷组中未分配空间可用于建立新的逻辑卷,逻辑卷建立后可以动态扩展和缩小空间.
+
+**物理块(Physical Extent,`PE`)**
+
+物理区域是物理卷中可用于分配的最小存储单元,`物理区域大小在建立卷组时指定`,一旦确定不能更改,同一卷组所有物理卷的物理区域大小需一致,新的pv加入到vg后,pe的大小自动更改为vg中定义的pe大小.
+
+
+		lvcreate -L 15G -n pldy1 lvmdisk 
+		
+		也可以使用-l参数,通过指定PE数来设定逻辑分区大小.
+		
+		lvcreate -l 18428 -n pldy1 lvmdisk 
+		
+**逻辑块(`Logical Extent`,`LE`)**
+
+逻辑区域是逻辑卷中可用于分配的最小存储单元,辑区域的大小取决于逻辑卷所在卷组中的物理区域(`PV`)的大小.
+
+逻辑卷在创建的过程中也被分成了一块一块的空间,这些空间称为LE(Logical Extents),在同一个卷组中,LE的大小和PE是相同的,并且一一对应.
