补充知识点

--- a/linux-马哥视频/17_03_sudo详解.md
+++ b/linux-马哥视频/17_03_sudo详解.md
@@ -106,7 +106,10 @@ Cmnd_Alias:
 			
 ####/var/log/secure
 
+sudo 使用过程都会比记录在该日志文件内.
 		
+		[chloroplast@iZ94jqmwawyZ ~]$ sudo tail /var/log/secure
+		Jul 20 11:09:32 iZ94jqmwawyZ sudo: chloroplast : TTY=pts/2 ; PWD=/home/chloroplast ; USER=root ; COMMAND=/bin/tail /var/log/secure
 			
 ###整理知识点
 
