添加sudo实例,以及which_hosts使用实例

--- a/linux-马哥视频/17_03_sudo详解.md
+++ b/linux-马哥视频/17_03_sudo详解.md
@@ -26,6 +26,19 @@ sudo 执行需要输入密码,防止其他用户执行命令.
 
 sudo 在默认情况下,在第一次输入密码后,会把密码认证信息记录下来,有效期为5分钟.`sudo -k`下次再执行命令无论是否超过5mins,都必须要提供密码.
 
+**sudo程序本身就是一个设置了SUID位的二进制文件**
+
+		ls -l /usr/bin/sudo
+		---s--x--x 1 root root 130720 4月   1 01:09 /usr/bin/sudo
+		
+它的所有者是root,所以每个用户都可以像root那样执行该程序.设置了SUID的程序在运行时可以给使用者以所有者的EUID.
+
+**sudo 和 suid**
+
+设置一个命令文件的`suid`和用`sudo`来运行它是不同的概念.`sudo`需要的不是目标用户的密码,而是执行`sudo`的用户的密码.
+
+`sudo`个人觉得是一个大的配置,不局限于以一个进程的属主(`suid`)或者属组(`sgid`)来执行.而且其可以限制更多,如`谁`在`哪些主机` `以谁的身份` `执行哪些命令` `可以输入或者不输入密码`.
+
 **sudo的配置文件**
 
 `/etc/sudoers`
@@ -114,3 +127,52 @@ sudo 使用过程都会比记录在该日志文件内.
 ###整理知识点
 
 ---
+
+####sudo的基本实例用法
+
+**hadoop用户可以在任何地点以管理员的身份执行命令useradd(无需密码)和usermod(需要密码)**
+
+			
+		hadoop  ALL=(root) NOPASSWD:/usr/sbin/useradd, PASSWD:/usr/sbin/userdel
+
+切换至hadoop用户测试结果:
+
+![17_03_1.png](./img/17_03_1.png "17_03_1.png")
+
+**hadoop用户和组可以在任何地点以管理员的身份执行命令执行 增,删,改,设置用户名密码,但不允许设置管理员的密码**
+
+		User_Alias USERADMIN = hadoop, %hadoop
+		Cmnd_Alias USERADMINCMND = /usr/sbin/useradd, /usr/sbin/usermod, /usr/sbin/userdel, /usr/bin/passwd [A-Za-z]*, ! /usr/bin/passwd root
+		USERADMIN ALL=(root) NOPASSWD: USERADMINCMND
+
+![17_03_2.png](./img/17_03_2.png "17_03_2.png")
+
+**hadoop用户只能在192.168.1.120主机远程登录并以管理员身份执行ifconfig eth0命令**
+
+		Cmnd_Alias NETCMND = /sbin/ifconfig eth0
+		hadoop 192.168.1.120 = (root) NOPASSWD:NETCMND
+		
+使用`192.168.1.104`测试,如图:
+
+![17_03_3.png](./img/17_03_3.png "17_03_3.png")		
+使用`192.168.1.120`测试,如图:
+
+![17_03_4.png](./img/17_03_4.png "17_03_4.png")
+
+**hadoop用户可以在任何地点以任何的身份执行所有命令,等同于root**
+
+			hadoop  ALL=(ALL)       ALL
+
+![17_03_5.png](./img/17_03_5.png "17_03_5.png")
+
+####euid 和 suid
+
+内核主要是根据euid和egid来确定进程对资源的访问权限.一个`进程`如果没有`SUID`或`SGID`位,则euid=uid  egid=gid,分别是运行这个程序的用户的uid和gid.
+
+		kevin用户的uid和gid分别为204和202,foo用户的uid和gid为200,201,kevin运行myfile程序形成的进程的euid=uid=204,egid=gid=202,内核根据这些值来判断进程对资源访问的限制,其实就是kevin用户对资源访问的权限,和foo没关系.
+		
+如果一个程序设置了SUID,`则euid和egid变成被运行的程序的所有者的uid和gid`.
+
+		如kevin用户运行myfile,euid=200,egid=201,uid=204,gid=202,则这个进程具有它的属主foo的资源访问权限.
+		
+SUID的作用就是这样: 让本来没有相应权限的用户运行这个程序时,可以访问他没有权限访问的资源.
