--- a/linux-马哥视频/18_01_加密类型及其相关算法.md
+++ b/linux-马哥视频/18_01_加密类型及其相关算法.md
@@ -16,6 +16,16 @@
 
 保障身份的正确性.
 
+**机密**
+
+* [对称加密](#symmetric-key-encryption)
+* [单向加密](#one-way-encrption)
+* [非对称(公钥)加密](#not-symmetric-key-encryption)
+
+**数据加密**
+
+数据加密不是一位一位的加密,而是加密前先把数据拆分成大小相同的数据块,在进行加密.
+
 ####机密性
 
 数据加密.数据解密.
@@ -36,7 +46,7 @@
 
 我们的安全性本身应该依赖于`秘钥`.		
 		
-**对称加密**
+#####[对称加密](id:symmetric-key-encryption)
 
 加密和解密使用的是同一个秘钥.
 
@@ -44,12 +54,21 @@
 缺点: 安全性完全依赖于秘钥,因为很多算法是公开的.
 
 当通信对象很多的情况下,没法解决有效的秘钥管理.		
-		
+
+**算法**:
+
+* `DES`: `D`ata `E`ncrption `S`tandard, 56bit
+	* 后来随着计算机性能提升,可以暴力破解了,就很少使用了
+* `3DES`: 3次`DES`
+* `AES`: 高级加密标准,使用 128bit 秘钥
+	* `AES192`,`AES256`,`AES512`(数字指的是秘钥长度,秘钥越长安全度越高,但是速度越慢)
+* `Blowfish`	
+								
 ####完整性
 
 数据完整性,
 
-**单向加密算法**
+#####[单向加密算法](id:one-way-encrption)
 
 * 单向加密特征: 输入一样,输出必然一样.
 * 雪崩效应: 输入的微小改变,将会引起结果的巨大改变.
@@ -63,6 +82,16 @@
 验证: 获取到数据后,使用同样的算法计算出特征码(指纹),进行比对.
 
 		A: plaintext:footprint --> B
+
+`算法`:
+
+* `MD4`
+* `MD5`: 使用 128 位定长输出
+* `SHA1`: 使用 106 位定长输出
+* `SHA`
+	* `SHA192`, `SHA256` , `SHA384` (数字指的是`输出`长度,因为单向加密是定长输入)
+* `CRC-32`: 不是加密算法,是一种校验功能
+	* 假设使用单向加密,2个输入不一样,输出一样, CRC-32允许出现
 
 **中间人攻击**
 
@@ -104,9 +133,21 @@
 		B得到: (g^x%p)^y = g^xy%p, B知道自己的y
 		现在双方结果是一样的,互联网传输4个数字,A和B可以计算得到相同的结果.这个数字就是秘钥.
 		
-###公钥加密算法: 非对称加密算法
+###[公钥加密算法: 非对称加密算法](id:not-symmetric-key-encryption)
 
 因为上述算法`Diffile-Hellman`又一个问题,比如现在来一个`C`发送消息给`B`说我时`A`. `B`接收到消息以后无法准确判断消息的来源.所以有了`非对称加密算法`.
+
+**2种核心功能: 加密和签名**
+
+* 身份认证(数字签名)
+* 数据加密
+* 秘钥交换(是数据加密的一部分)
+
+**算法**
+
+* RSA: 加密,签名
+* DSA: 签名
+* ElGamal(商业算法): 
 
 ####密钥对:
 
@@ -162,3 +203,7 @@ CA 证书颁发架构和彼此之间的信任关系
 ###整理知识点
 
 ---
+
+###CRC32
+
+CRC的全称是循环冗余校验.
